[build-system]
requires = ["setuptools>=61.0", 
            "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "basic_sort_The_Slice_Is_Right"
version = "0.0.1"
authors = [{ name="Bryan Michael Sturdivant", email="bryan.sturdivant@maine.edu" },
            { name="Cooper Stepankiw", email="cooper.stepankiw@maine.edu" },
            { name="Ethan Wyman", email="ethan.wyman@maine.edu" },
            { name="Gregory Michaud", email="gregory.michaud@maine.edu" },
            { name="Israk Arafat", email="israk.ayasin@maine.edu" }
              ]
description = "A Python package for sorting integer lists - COS397 DevOps Exercise"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/Team-Ochre-Capstone/HW-5/issues"


